# ml_in_ms_wt24

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
data/: polymers_tend_to_crystalize.json
src/wt_25_ml_in_ms/: __init__.py
wt_25_ml_in_ms/: __about__.py
wt_25_ml_in_ms/01_ex/: evaluate_python_skills.ipynb  install_LLM.ipynb  prompt_LLMs.ipynb
wt_25_ml_in_ms/01_hack/: data.ipynb  template_ml_computer_vision.ipynb  template_ml_regression.ipynb
wt_25_ml_in_ms/02_ex/: first_ml_pipeline.ipynb  python_abcs.ipynb  python_xyzs.ipynb
wt_25_ml_in_ms/02_hack/: deploy_values.py  nn_values.ipynb
wt_25_ml_in_ms/03_ex/: intro_data.ipynb  outlier_detection.ipynb  wikipedia_api.ipynb
wt_25_ml_in_ms/04_ex/: 2d_umap_projection.ipynb  balance_data_and_save.ipynb  outlier_detection.ipynb
wt_25_ml_in_ms/05_ex/: fingerprints.ipynb  multi_dim_arrays.ipynb  synthesize_your_own_data.ipynb
wt_25_ml_in_ms/06_ex/: step-by-step-linear-regression.ipynb
wt_25_ml_in_ms/07_ex/: my_first_nn.ipynb
wt_25_ml_in_ms/08_ex/: autoML.ipynb  flaml.ipynb
wt_25_ml_in_ms/09_ex/: backprop.ipynb  streamlit.py
