[project]
name = "wt-25-ml-in-ms"
version = "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Christopher Kuenneth", email = "christopher.kuenneth@gmail.com" },
]
dependencies = [
    "matplotlib",
    "seaborn",
    "numpy",
    "pandas",
    "wikipedia-api",
    "wordcloud",
    "torch",
    "streamlit",
    "ipykernel>=6.29.5",
    "flaml[automl]>=2.3.1",
    "holoviews>=1.20.0",
    "colorcet>=3.1.0",
    "scikit-image>=0.24.0",
    "psmiles[polyBERT] @ git+https://github.com/Ramprasad-Group/psmiles.git",
    "jax>=0.4.30",
]
